--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="chii's profile. autumn edition.">
     <meta property="og:site_name" content="chii's profile. autumn edition">
     <meta property="og:title" content="hello world. it's chii">
-    <meta property="og:description" content="hii's profile. autumn edition.">
+    <meta property="og:description" content="chii's profile. autumn edition.">
     <meta property="og:image" content="images/profilepic.jpg">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
