--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <div class="card">
         <h2>dislikes</h2>
-        <p>I hate corriander. It tastes like soap.
+        <p>I hate coriander. It tastes like soap.
         <br>I won't even include a picture because I hate it so much.</p>
         <a href="javascript:void(0)" class="button" onClick="toggleImage()">why coriander is bad</a>
         <br>
@@ -53,7 +53,7 @@
         <h2>my socials</h2>
         <ul>
           <li><a href="https://www.linkedin.com/in/cyee3012/"><i class="fab fa-linkedin"></i></a></li>
-          <li><a href=""><i class="fab fa-instagram" onClick="alert('please ask for my instgram in person.')"></i></a></li>
+          <li><a href=""><i class="fab fa-instagram" onClick="alert('please ask for my instagram in person.')"></i></a></li>
           <li><a href="https://github.com/cyee3012/"><i class="fab fa-github-square"></i></a></li>
         </ul>
       </div>
